RangeSlider and RadarChart's overflow fix

--- a/client/modules/User/components/DiscItem/DiscItem.scss
+++ b/client/modules/User/components/DiscItem/DiscItem.scss
@@ -42,10 +42,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-
-    .sliderContainer {
-      width: 90%;
-    }
+    align-items: center;
   }
 }
 
@@ -54,13 +51,20 @@
     display: flex;
     flex-flow: row wrap;
     color: $grey;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin: 10px 0;
 
     .name {
       font-size: 18px;
       text-align: center;
       color: $grey;
+    }
+
+    .controls {
+      margin: 20px 0;
+
+      .sliderContainer {
+        width: 90%;
+      }
     }
   }
 
@@ -87,6 +91,11 @@
 
     .controls{
       margin: 20px 0 40px 0;
+
+      .sliderContainer {
+
+        width: 80%;
+      }
     }
   }
 }
